manifests/gitpod/015_NetworkPolicy_ws-proxy.yaml
---
# networking.k8s.io/v1/NetworkPolicy ws-proxy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    app: gitpod
    component: ws-proxy
  name: ws-proxy
  namespace: gitpod
spec:
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
        - port: 9090
          protocol: TCP
        - port: 2200
          protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: ws-proxy
  policyTypes:
    - Ingress
